# Adaptive

./: .env  .gitignore  QUICKSTART.md  README.md  adaptive.py  agent.py  config.yaml  constants.py  evolve.py  evolve_agents.py  install.sh  pyproject.toml  utils.py
.agent_design_notes/: DESIGN.md
.feature_rollout/: agent_optimization_features.md  feature_rollout_plan.txt  research_paper_implementation.txt
.feature_rollout/GEPA/: feynman_analysis.md
agent_memory/: __init__.py  memory_prompts.py  memory_setup.py
agent_middleware/: __init__.py  context_middleware.py
agent_tools/: file_tools.py  langfuse_mcp_server.py  langsmith_mcp_server.py  langsmith_tools.py  mlflow_mcp_server.py
agents_tested/lambda-autotuner/: .env  .env.example  __init__.py  agent.py  config.yaml  constants.py  run_agent_with_datadog.sh  run_synthetic_questions.py  test_mlflow_mcp.py  tools.py  utils.py
agents_tested/lambda-autotuner/datadog_integration/: DATADOG_SETUP.md  run_agent_with_datadog.sh
agents_tested/lambda-autotuner/mlflow_integration/: MLFLOW_SETUP.md  __init__.py  mlflow_tracer.py
agents_tested/lambda-autotuner/prompts/: lambda_autotuner_agent_system_prompt.txt
agents_tested/lambda-autotuner/synthetic_questions/: lambda_autotuner_questions.json  lambda_autotuner_questions_mlflow.json
agents_tested/log-curator-langfuse/prompts/: log_curator_langfuse_system_prompt.txt
blog/: architecture-diagram.md  blog.md
configs/: config.yaml  hitl_config.yaml  prompt_optimization_config.yaml  self_questioning_config.yaml
deployment/: Dockerfile
design_notes/: DESIGN.md  EVOLUTION_AGENT_DESIGN.md
docs/: _config.yml  blog.html  docs.html  index.html  styles.css
evaluate_adaptive/: README.md  eval.yaml  run_evaluation.py
evaluate_adaptive/test_data/: langsmith_synthetic_questions.json  mlflow_synthetic_questions.json
evaluate_evolve/: README.md  run_evaluation.py
evaluate_evolve/test_data/: langfuse_synthetic_questions.json  langsmith_synthetic_questions.json
evolution/: prompt_evolution.py
evolution/self_questioning/: self_questioning.py
evolution/self_questioning/configs/: self_questioning_config.yaml
evolution/self_questioning/prompt_templates/: capability_gap_analysis_prompt.txt  exploration_prompt.txt  task_generation_prompt.txt
guides/: ADMIN_SETUP.md  ARCHITECTURE.md  COGNITO_SETUP.md  IMPLEMENTATION_SUMMARY.md  ONBOARDING_GUIDE.md  QUICKSTART.md  USER_GUIDE.md
insights/: insights_agents.py
prompt_templates/: evolution_error_analysis.txt  log_curator_base_prompt.txt  orchestrator_prompt.txt  platform_router_prompt.txt  routing_decision_prompt.txt
prompt_templates/context_engineering/langsmith/: summarization_base_prompt.txt
prompt_templates/evolution/: prompt_optimization_system_prompt.txt
prompt_templates/insights_prompts/: insights_prompt_langfuse.txt  insights_prompt_langsmith.txt  insights_prompt_mlflow.txt
prompt_templates/router_prompts/: route_directly_to_evolution_from_insights.txt
prompts/: conversation_summarization.txt
reports/: agent_trace_error_analysis.md  cost_tracking_error_analysis.md  error_analysis_report.md  evolve_ai_error_analysis.md  lambda-autotuner-agent-error-analysis.md  lambda-autotuner-trace-error-analysis.md  lambda_autotuner_agent_error_analysis.md
scripts/: install.sh  setup_cognito.sh
src/adaptive/: __init__.py  admin_cli.py  api_auth.py  auth.py  cli.py  cognito_auth.py  config_manager.py  onboarding.py
src/adaptive/backend/: __init__.py  api.py
src/self_healing_agent/: __init__.py  cli.py
