[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "self-healing-agent"
version = "0.1.0"
description = "A multi-agent system for healing and evolving agentic applications over time"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Self-Healing Agent Team"}
]
keywords = ["ai", "agents", "langchain", "observability", "self-healing", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "bedrock-agentcore>=1.0.6",
    "boto3>=1.40.67",
    "ddtrace>=3.18.1",
    "deepagents>=0.2.5",
    "httpx>=0.28.1",
    "langchain",
    "langchain-aws>=1.0.0",
    "langchain-mcp-adapters>=0.1.13",
    "langfuse>=3.9.3",
    "langgraph-checkpoint-aws>=1.0.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.0",
    "requests>=2.32.0",
    "tavily>=1.1.0",
    "transformers>=4.30.0",
    "zmq>=0.0.0",
]

[project.scripts]
self-healing-agent = "self_healing_agent.cli:main"
evolve = "self_healing_agent.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/self-healing-agent"
Documentation = "https://github.com/yourusername/self-healing-agent#readme"
Repository = "https://github.com/yourusername/self-healing-agent"
Issues = "https://github.com/yourusername/self-healing-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/self_healing_agent"]
